tests/purs/failing/Reserved.out
Error found:
at tests/purs/failing/Reserved.purs:6:1 - 6:4 (line 6, column 1 - line 6, column 4)

  Unable to parse module:
  Unexpected token '(<)'


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

